--- a/index.html
+++ b/index.html
@@ -77,6 +77,64 @@
       <div class="jumbotron">
         <h1>welcome</h1>
       </div>
+
+      <div class="container-content d-flex justify-content-evenly">
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem">
+          <img width="100%" src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
+              quod! Laborum ratione quasi cupiditate. Eveniet temporibus tempore
+              inventore commodi exercitationem dolore rerum. Eligendi non
+              blanditiis laborum nihil. Eveniet, non blanditiis?
+            </p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem">
+          <img width="100%" src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
+              quod! Laborum ratione quasi cupiditate. Eveniet temporibus tempore
+              inventore commodi exercitationem dolore rerum. Eligendi non
+              blanditiis laborum nihil. Eveniet, non blanditiis?
+            </p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem">
+          <img width="100%" src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
+              quod! Laborum ratione quasi cupiditate. Eveniet temporibus tempore
+              inventore commodi exercitationem dolore rerum. Eligendi non
+              blanditiis laborum nihil. Eveniet, non blanditiis?
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
