--- a/index.html
+++ b/index.html
@@ -36,30 +36,8 @@
             id="navbarSupportedContent"
           >
             <ul class="my-link navbar-nav me-auto mb-2 mb-lg-0 ml">
-              <li class="nav-item dropdown">
-                <a
-                  class="btn btn-secondary dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Kategori
-                </a>
-
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Kucing</a></li>
-                  <li><a class="dropdown-item" href="#">Anjing</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Lain lain</a>
-                  </li>
-                </ul>
-              </li>
               <li class="nav-item ms-3">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item ms-3">
-                <a class="nav-link" href="#">Cari</a>
               </li>
               <li class="nav-item ms-3 btn-masuk">
                 <a class="nav-link" href="login.html">Masuk</a>
@@ -75,66 +53,14 @@
 
     <main class="container-fluid">
       <div class="jumbotron">
-        <h1>welcome</h1>
-      </div>
-
-      <div class="container-content d-flex justify-content-evenly">
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img width="100%" src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
-              quod! Laborum ratione quasi cupiditate. Eveniet temporibus tempore
-              inventore commodi exercitationem dolore rerum. Eligendi non
-              blanditiis laborum nihil. Eveniet, non blanditiis?
-            </p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img width="100%" src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
-              quod! Laborum ratione quasi cupiditate. Eveniet temporibus tempore
-              inventore commodi exercitationem dolore rerum. Eligendi non
-              blanditiis laborum nihil. Eveniet, non blanditiis?
-            </p>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img width="100%" src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
-              quod! Laborum ratione quasi cupiditate. Eveniet temporibus tempore
-              inventore commodi exercitationem dolore rerum. Eligendi non
-              blanditiis laborum nihil. Eveniet, non blanditiis?
-            </p>
-          </div>
+        <div style="position: relative" class="hero">
+          <a type="button" class="btn btn-primary" href="hewan.html"
+            >Cari Hewan Peliharaan mu</a
+          >
         </div>
       </div>
+
+      <div class="container-content d-flex justify-content-evenly"></div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
